@@ -84,6 +84,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FSDataInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FSDataOutputStream
 import|;
 end_import
@@ -600,6 +614,8 @@ operator|!=
 literal|null
 condition|)
 block|{
+try|try
+init|(
 name|InputStream
 name|is
 init|=
@@ -607,8 +623,7 @@ name|pwdFile
 operator|.
 name|openStream
 argument_list|()
-decl_stmt|;
-try|try
+init|)
 block|{
 name|password
 operator|=
@@ -623,14 +638,6 @@ name|trim
 argument_list|()
 operator|.
 name|toCharArray
-argument_list|()
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|is
-operator|.
-name|close
 argument_list|()
 expr_stmt|;
 block|}
@@ -692,20 +699,29 @@ operator|.
 name|getPermission
 argument_list|()
 expr_stmt|;
-name|keyStore
-operator|.
-name|load
-argument_list|(
+try|try
+init|(
+name|FSDataInputStream
+name|in
+init|=
 name|fs
 operator|.
 name|open
 argument_list|(
 name|path
 argument_list|)
+init|)
+block|{
+name|keyStore
+operator|.
+name|load
+argument_list|(
+name|in
 argument_list|,
 name|password
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -1429,6 +1445,8 @@ block|{
 return|return;
 block|}
 comment|// write out the keystore
+try|try
+init|(
 name|FSDataOutputStream
 name|out
 init|=
@@ -1442,8 +1460,7 @@ name|path
 argument_list|,
 name|permissions
 argument_list|)
-decl_stmt|;
-try|try
+init|)
 block|{
 name|keyStore
 operator|.
@@ -1509,11 +1526,6 @@ name|e
 argument_list|)
 throw|;
 block|}
-name|out
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
 name|changed
 operator|=
 literal|false
